--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -56,6 +56,7 @@ jobs:
             libgpod-devel
             libmtp-devel
             libchromaprint-devel
+            libmygpo-qt5-devel
             desktop-file-utils
             update-desktop-files
             appstream-glib
@@ -128,6 +129,7 @@ jobs:
             libgpod-devel
             libmtp-devel
             libchromaprint-devel
+            libmygpo-qt5-devel
             desktop-file-utils
             update-desktop-files
             appstream-glib
@@ -293,6 +295,7 @@ jobs:
             libgpod-devel
             libmtp-devel
             libchromaprint-devel
+            libmygpo-qt5-devel
             desktop-file-utils
             update-desktop-files
             appstream-glib
@@ -460,6 +463,7 @@ jobs:
             libgpod-devel
             libmtp-devel
             libchromaprint-devel
+            libmygpo-qt5-devel
             desktop-file-utils
             update-desktop-files
             appstream-glib
@@ -493,6 +497,8 @@ jobs:
       - uses: actions/checkout@v1.2.0
       - name: Add tagparser repo
         run: zypper -n ar -c -f -n 'repo-tagparser' https://download.opensuse.org/repositories/home:/mkittler/openSUSE_Tumbleweed/ repo-tagparser
+      - name: Add libmygpo repo
+        run: zypper -n ar -c -f -n 'repo-libmygpo' https://download.opensuse.org/repositories/home:/jonaski:/libraries/openSUSE_Tumbleweed/ repo-libmygpo
       - name: Update packages
         run: zypper --non-interactive --gpg-auto-import-keys ref
       - name: Upgrade packages
@@ -542,6 +548,7 @@ jobs:
             libgpod-devel
             libmtp-devel
             libchromaprint-devel
+            libmygpo-qt6-devel
             desktop-file-utils
             update-desktop-files
             appstream-glib
@@ -619,6 +626,7 @@ jobs:
             libmtp-devel
             libchromaprint-devel
             fftw-devel
+            libmygpo-qt5-devel
             desktop-file-utils
             libappstream-glib
             hicolor-icon-theme
@@ -765,6 +773,7 @@ jobs:
             libcdio-dev
             libmtp-dev
             libgpod-dev
+            libmygpo-qt-dev
       - name: Create Build Environment
         shell: bash
         run: cmake -E make_directory build
@@ -822,6 +831,7 @@ jobs:
             libcdio-dev
             libmtp-dev
             libgpod-dev
+            libmygpo-qt-dev
       - name: Create Build Environment
         shell: bash
         run: cmake -E make_directory build
@@ -884,6 +894,7 @@ jobs:
             libcdio-dev
             libmtp-dev
             libgpod-dev
+            libmygpo-qt-dev
       - name: Create Build Environment
         shell: bash
         run: cmake -E make_directory build
@@ -946,6 +957,7 @@ jobs:
             libcdio-dev
             libmtp-dev
             libgpod-dev
+            libmygpo-qt-dev
       - name: Create Build Environment
         shell: bash
         run: cmake -E make_directory build
@@ -1008,6 +1020,7 @@ jobs:
             libcdio-dev
             libmtp-dev
             libgpod-dev
+            libmygpo-qt-dev
       - name: Create Build Environment
         shell: bash
         run: cmake -E make_directory build
@@ -1070,6 +1083,7 @@ jobs:
             libcdio-dev
             libmtp-dev
             libgpod-dev
+            libmygpo-qt-dev
       - name: Create Build Environment
         shell: bash
         run: cmake -E make_directory build
